# project_1

./: .dockerignore  .gitignore  .initial_data_hash  .pre-commit-config.yaml  Containerfile  Dockerfile  Makefile  Procfile  README.md  auth.json  build.sh  card_debug.html  check_db.py  check_model.py  data.json  db.sqlite3.backup  debug_page.html  debug_selector.py  docker-compose.yaml  fetch_all_images.sh  full_clean_kubectl.sh  gunicorn.conf.py  main.py  markdown  migrate_data.py  nohup.out  one_watch.json  package-lock.json  package.json  parsed_watches_20260311_103028.txt  pre-commit-config.yaml  pyproject.toml  railway-vars.json  railway.json  render.yaml  requirements-dev.txt  requirements.txt  restart.sh  run_server.sh  skaffold.yaml  (+7 more)
.github/workflows/: send-telegram.yml  telegram-sender.yml
config/: settings.py  urls.py  wsgi.py
k8s/: project1-k8s.yaml  sealed-secret.yaml
k8s/base/: ingress.yaml  kustomization.yaml  service.yaml
static/: test.html
static/css/: custom.css  tailwind.css
static/js/: exchangeRate.js
staticfiles/css/: custom.css  tailwind.css
staticfiles/js/: exchangeRate.js
templates/base/: base.html  css_link.html  footer.html  navbar.html  navbar.html.bak  test_navbar.html
templates/watch/: brand_list.html  home.html  pagination.html  pagination_tailwind.html  product_detail.html  product_list.html
watch/: admin.py  api_endpoint.py  api_urls.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
watch/migrations/: 0001_initial.py  0002_product_price.py  0003_alter_product_price.py  0020_watchitem.py  (+24 more)
(+9 files in other folders)
